<resources>
    <string name="app_name">迅畅在线</string>
    <string name="index_home">ETC</string>
    <string name="index_expand">拓展</string>
    <string name="expand">拓展</string>
    <string name="mime">我的</string>
    <string name="regist_protocal">注册即时表示同意</string>
    <string name="protocal">《迅畅用户协议》</string>
    <string name="please_input_phonenumber">亲，请输入您的手机号码</string>
    <string name="please_input_password">亲，请输入6～16位密码</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="login_message">短信验证码登录</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="please_input_correct_phone_number">亲，请您输入正确的手机号码</string>
    <string name="set_verifycode">亲，请您输入验证码</string>
    <string name="timeLate">秒后可重新发送</string>
    <string name="reStartGetCode">重新获取验证码</string>
    <string name="login_fast_regist">快速注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="phone_isempty">亲，请输入您的手机号码</string>
    <string name="password_isempty">亲，请输入密码</string>
    <string name="please_input_verificodem">亲，请输入图形验证码</string>
    <string name="password_isshort">亲，您输入的密码太短了</string>
    <string name="please_input_phonenumbers">输入您的手机号码</string>
    <string name="please_input_passwords">输入6～16位含数字字母的密码</string>
    <string name="set_verifycodes">请输入短信验证码</string>
    <string name="set_ig_verifycodes">请输入验证码</string>
    <string name="please_set_passwords">设置6~16位含数字字母的密码</string>
    <string name="set_password_text">此手机号码没有注册，设置密码完成注册</string>
    <string name="set_accomplish">完成</string>
    <string name="setpassword">设置密码</string>
    <string name="messagelogin">短信登录</string>
    <string name="retrieve_password">找回密码</string>
    <string name="set_picture_verifycodes">请输入图形验证码</string>
    <string name="hava_new_version">有新版本</string>
    <string name="download">下载</string>
    <string name="cancle">取消</string>
    <string name="download_finish">下载完成</string>
    <string name="reject_permission">您禁止了权限</string>
    <string name="personinfo">个人信息</string>
    <string name="bill_check">账单查询</string>
    <string name="electronic_invoice">电子发票</string>
    <string name="traffic_status">实时路况</string>
    <string name="detail">明细</string>
    <string name="fare_calculate">路费计算</string>
    <string name="coming_soon">敬请期待</string>
    <string name="website_check">网点查询</string>
    <string name="home_etconline">ETC在线办理</string>
    <string name="home_etcrecharge">ETC充值</string>
    <string name="home_etccircle">ETC圈存</string>
    <string name="strditle">高速公路畅通无阻\n“0”元照进不误</string>
    <string name="uesr_type">用户类型</string>
    <string name="org_user">单位用户</string>
    <string name="personal_user">个人用户</string>
    <string name="car_card_number">车牌号</string>
    <string name="car_card_color">车牌颜色</string>
    <string name="verify">验证</string>
    <string name="car_card_format">格式:(湘A12345)</string>
    <string name="person_upload_license_hint">请上传您的身份证与行驶证，并保证四角完整，文字清晰可见</string>
    <string name="org_upload_license_hint">请上传您的营业执照（组织机构代码证）与行驶证，并保证四角完整，文字清晰可见</string>
    <string name="id_card_figure">身份证示例图</string>
    <string name="drive_license_figure">行驶证示例图</string>
    <string name="upload">上传</string>
    <string name="car_owner_phone">车辆所有人手机</string>
    <string name="next_step">下一步</string>
    <string name="receiver">收件人</string>
    <string name="post_address_contact_phone">联系手机</string>
    <string name="region">所在地区</string>
    <string name="street">街道</string>
    <string name="detailedly_address">详细地址(5到60个字)</string>
    <string name="advance_money">预收金额200元</string>
    <string name="sum_pay">合计:&#160;&#160;%1$d&#160;&#160;元</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝</string>
    <string name="checking">正在审核中</string>
    <string name="return_index">返回首页</string>
    <string name="checking_finish_time_hint">预计完成时间：%1$s\n我们将尽快通过电话的形式与您进行人工回访，请保持您预留联系方式的有效与畅通。迅畅ETC祝您生活愉快</string>
    <string name="checking_hint">亲爱的%1$s,您的车辆与个人信息</string>
    <string name="ETC_online_issue">ETC在线办理</string>
    <string name="finish">完成</string>
    <string name="pay">支付</string>
    <string name="upload_license">上传证件</string>
    <string name="edit_address">填写地址</string>
    <string name="please_input_smscode">亲，请输入短信验证码</string>
    <string name="select_street">街道选择</string>
    <string name="select_region">地区选择</string>
    <string name="please_select_region_before">请先选择所在地区</string>
    <string name="use_camera">拍照</string>
    <string name="get_photo_from_album">从相册中选取</string>
    <string name="camera_not_found">找不到相机</string>
    <string name="please_upload_idcard">请上传身份证照片</string>
    <string name="please_upload_driven_license">请上传行驶证照片</string>
    <string name="please_upload_org_license">请上传营业执照或组织机构代码证照片</string>
    <string name="registcomlete">注册成功，请登录</string>
    <string name="smscodeerr">短信验证码输入错误</string>
    <string name="passworderr">密码错误</string>
    <string name="telphoneunregistered">手机尚未注册</string>
    <string name="jsonexception">jsonErr</string>
    <string name="request_failed">请求失败，请检查网络连接是否正常</string>
    <string name="send_faid">请求失败,请检查手机号码是否正确</string>
    <string name="send_success">发送成功</string>
    <string name="login_success">登录成功</string>
    <string name="intenet_err">登录失败，请检查网络是否连接</string>
    <string name="server_err">服务器维护中</string>
    <string name="registing">注册中..</string>
    <string name="para_err">参数错误</string>
    <string name="find_faid">找回失败</string>
    <string name="loading">加载中...</string>
    <string name="find_success">找回成功,请重新登录</string>
    <string name="pwd_easy">密码太简单</string>
    <string name="now_login">立即登录</string>
    <string name="err_captcha">输入验证码错误</string>
    <string name="input_pwd_ismore">密码输入错误超过三次请输入验证码</string>
    <string name="sethead">设置头像</string>
    <string name="cancel">取消</string>
    <string name="exitlogin">退出登录</string>
    <string name="logining">登录中..</string>
    <string name="nologin">你还没有登录</string>
    <string name="nosethead">你暂未设置头像</string>
    <string name="net_erro">网络错误</string>
    <string name="please_input_correct">请填写正确的车牌号码</string>
    <string name="reget_verify_code">重新获取验证码</string>
    <string name="login_failed">登录失败</string>
    <string name="receiver_notallow_empty">收件人不能为空</string>
    <string name="receiver_length_limit">收件人：2-15个字符限制</string>
    <string name="receiver_phone_notallow_empty">联系手机不能为空</string>
    <string name="phone_number_notallow_empty">手机号码不能为空</string>
    <string name="please_select_street">请选择街道</string>
    <string name="please_select_region">请选择地区</string>
    <string name="please_input_detail_address">请输入详细地址</string>
    <string name="detail_address_length_limit">详细地址:5到60个字符限制</string>
    <string name="postaddress_repeat">收货地址重复</string>
    <string name="please_select_pay_method">选择付款方式</string>
    <string name="issue_pay_hint">预收金额200元，将作为客车用户的OBU车载单元押金（3年内可无理由退款，OBU车载单元将于3个工作日内寄到）或货车用户的充值金额（直接充入您的湘通卡内）</string>
    <string name="uploading">上传中</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="isregist">手机号码已经注册</string>
    <string name="harvestaddress">我的收货地址</string>
    <string name="share_app">分享迅畅在线</string>
    <string name="changepassword">修改密码</string>
    <string name="changephone">更换帐号手机</string>
    <string name="networktelephone">网点电话</string>
    <string name="right">修改</string>
    <string name="smsshare">短信</string>
    <string name="moreshare">更多分享</string>
    <string name="select_share_type">选择分享类型</string>
    <string name="userhead">设置头像</string>
    <string name="share">分享</string>
    <string name="sharecontent">分享我们的app下载连接连接，后台提供，待添加。。。。。迅畅官网：</string>
    <string name="origin_phone">原手机号：</string>
    <string name="new_phone">新手机号：</string>
    <string name="save_password">保存</string>
    <string name="origin_password">原密码：</string>
    <string name="new_password">新密码：</string>
    <string name="regist_success">注册成功请登录</string>
    <string name="hunan_cardnum">湘通卡卡号：</string>
    <string name="hint_input_cardnum">请输入20位湘通卡卡号</string>
    <string name="recharge_amount">充值金额：</string>
    <string name="add">\t添加</string>
    <string name="recharge_detial">待充值明细：</string>
    <string name="recharge_total">合计：</string>
    <string name="please_select">选择支付方式</string>
    <string name="please_select_pay_methods">选择支付方式：</string>
    <string name="select_recharge_card">选择卡</string>
    <string name="nothing_card">没有充值记录！</string>
    <string name="recharge">充值</string>
    <string name="card_isempty">请输入ETC卡号</string>
    <string name="money_isempty">充值金额不能为空</string>
    <string name="add_success">添加成功</string>
    <string name="nothing_isempty">没数据了</string>
    <string name="orgin_money">0.00元</string>
    <string name="yuan">元</string>
    <string name="my_receipt_address">我的收货地址</string>
    <string name="modify_pwd">修改密码中...</string>
    <string name="modify_pwd_fail">修改密码失败</string>
    <string name="modify_pwd_succ">修改密码成功，请使用新密码重新登录</string>
    <string name="password_issame">亲，你输入的新密码和原密码不能一样哦</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="is_zero">充值的额度小于0元</string>
    <string name="is_charge_big">单张卡充值金额不能大于¥20000.00元</string>
    <string name="add_card_ing">添加中...</string>
    <string name="add_succ">添加成功</string>
    <string name="add_faid">添加失败,请检查卡是否正确</string>
    <string name="pay_faid">支付失败-</string>
    <string name="phone_issame">亲，你输入的新手机号和原手机号不能一样哦</string>
    <string name="my_share">我的推荐</string>
    <string name="wechat">微信</string>
    <string name="wechat_timeline">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="sms">短信</string>
    <string name="wx_pay_loading">加载中...</string>
    <string name="pay_failed">支付失败</string>
    <string name="pay_result_log">支付结果</string>
    <string name="share_error">分享失败</string>
    <string name="share_complete">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="input_recharge_info">请输入卡号或者充值金额</string>
    <string name="download_success">下载成功</string>
    <string name="download_cancle">下载取消</string>
    <string name="add_recharge_info">请先添加充值订单</string>
    <string name="load_nfc">NFC圈存</string>
    <string name="load_bluetooth_box">蓝牙盒子圈存</string>
    <string name="nfc_text">在读卡过程中，请将卡紧贴手机背面</string>
    <string name="replace_device">更换设备</string>
    <string name="read_card">读卡</string>
    <string name="store">圈存</string>
    <string name="name">姓名:</string>
    <string name="card_info">卡信息</string>
    <string name="store_success">圈存成功</string>
    <string name="owner_name">用户名称：%1$s</string>
    <string name="card_id">湘通卡号：%1$s</string>
    <string name="car_id">车牌号：%1$s</string>
    <string name="store_money">本次圈存金额：%1$s</string>
    <string name="balance">余额：%1$s</string>
    <string name="storing">圈存中</string>
    <string name="read_card_info_fault">读卡失败</string>
    <string name="no_know_card">未识别的卡</string>
    <string name="phone_not_support_nfc">手机不支持NFC</string>
    <string name="please_open_NFC_function">请开启手机的NFC功能</string>
    <string name="every_where_save">随时随地的可圈存</string>
    <string name="save_time_and_effort">省时，省力\n避免排队</string>
    <string name="request_faileds">网络请求失败</string>
    <string name="netstores_address">详细地址:</string>
    <string name="person_charge">负责人: %1$s</string>
    <string name="change_user">切换账号</string>
    <string name="dialog_exit">退出登录</string>
    <string name="to_CreditForLoad">去圈存</string>
    <string name="confirm">确定</string>
    <string name="recharge_success">充值成功</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="card_num">卡号:</string>
    <string name="card_type">卡类型：湘通卡（储蓄卡）</string>
    <string name="phone_num">手机号：</string>
</resources>