<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingLeft="23dp"
    android:paddingRight="23dp"
    android:gravity="center"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_wechat"
        android:gravity="center"
        android:drawableTop="@drawable/vd_wechat"
        android:text="@string/wechat"
        android:drawablePadding="5dp"
        android:textColor="@color/colorGray"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorGray"
        android:id="@+id/tv_wechat_timeline"
        android:gravity="center"
        android:drawableTop="@drawable/vd_circle_friends"
        android:text="@string/wechat_timeline"
        android:drawablePadding="5dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorGray"
        android:id="@+id/tv_qq"
        android:gravity="center"
        android:drawableTop="@drawable/vd_qq"
        android:text="@string/qq"
        android:drawablePadding="5dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorGray"
        android:id="@+id/tv_sms"
        android:gravity="center"
        android:drawableTop="@drawable/vd_message"
        android:text="@string/sms"
        android:drawablePadding="5dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>