<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:text="@string/please_select_pay_methods"
   />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <RadioGroup
        android:id="@+id/payways_rediogroup"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/pay_alipay"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:checked="true"
            android:textColor="@color/textcolor"
            android:gravity="center_vertical"
            android:text="@string/alipay" />
        <RadioButton
            android:textColor="@color/textcolor"
             android:id="@+id/pay_wechat"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/wechat_pay" />
    </RadioGroup>

    <Button
        android:textColor="@color/white"
        android:id="@+id/etc_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_button"
        android:text="@string/pay" />
</LinearLayout>