<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="22dp"
        android:paddingRight="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/detail"
            android:textColor="@color/textcolor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/obu_price_textview"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/advance_money"
            android:textColor="@color/textcolor"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/issue_recharge_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="充值（单次不能低于50元）"
                android:textColor="@color/textcolor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/recharge_amount_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="元"
                android:textColor="@color/textcolor"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bottom_line_color" />

        <TextView
            android:id="@+id/issue_pay_amount_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="right|center_vertical"
            android:text="@string/sum_pay" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bottom_line_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/please_select_pay_method"
                android:textColor="@color/textcolor"
                android:textSize="15sp" />

            <RadioGroup

                android:id="@+id/pay_type_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/alipay_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/alipay"
                    android:textColor="@color/textcolor"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/wechat_pay_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/wechat_pay"
                    android:textColor="@color/textcolor"
                    android:textSize="15sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/issue_pay_hint_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/issue_pay_hint"
        android:textColor="@color/textcolor"
        android:textSize="13sp" />

    <Button
        android:id="@+id/commit_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>