<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
   <TextView
       android:gravity="center"
       android:layout_marginTop="10dp"
       android:text="性别一经修改不可改变"
       android:layout_width="wrap_content"
       android:layout_height="40dp" />
    <View
        android:background="@color/colorOrange"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>
    <RadioGroup
        android:id="@+id/payways_rediogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <RadioButton
            android:id="@+id/select_man"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:checked="true"
            android:text="@string/man"
            android:textColor="@color/textcolor" />

        <RadioButton
            android:id="@+id/select_woman"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/woman"
            android:textColor="@color/textcolor" />
    </RadioGroup>
    <View
        android:background="@color/colorOrange"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/select_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/confirm" />
</LinearLayout>