<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/recharge_success"
        android:textSize="15sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3c3f41" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/to_CreditForLoad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/to_CreditForLoad" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#3c3f41" />

        <TextView
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>