<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/card_num" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/card_type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/phone_num" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null" />
    </LinearLayout>
</LinearLayout>