<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/hunan_cardnum"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_input_cardnum"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            app:srcCompat="@drawable/vd_expand_on" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/recharge_amount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp" />

    <android.support.v7.widget.RecyclerView
        android:padding="5dp"
        android:background="@color/white"
        android:id="@+id/recharge_recyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/recharge_detial"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/recharge_total"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableLeft="@drawable/vd_add"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="25dp"
            android:paddingRight="10dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:padding="5dp"
        android:background="@color/white"
        android:id="@+id/prepaid_recharge_recyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>